# ECOmanager

./: .coverage  .dockerignore  .env.example  .gitignore  .secrets.baseline  CLAUDE.md  Dockerfile  README.md  api.py  create_sample_eco.py  eco_manager.py  eco_system.db  make_admin.py  pyproject.toml  requirements.txt  sample_eco.db  sample_report.md  specs.txt
.github/workflows/: tests.yml
static/: app.js  dashboard.html  index.html  style.css
tests/: conftest.py  test_api.py  test_eco_manager.py
